test/Fail/Issue4638-3.err
Issue4638-3.agda:11.7-8: error: [DefinitionIsErased]
Identifier c is declared erased, so it cannot be used here
when checking that the expression c has type D
